--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h3>About me</h3>
-									<p>Hi there, I'm Subhadeep Jana a.k.a SubtreX. <br>
+									<p>Hello there, I'm Subhadeep Jana a.k.a SubtreX. <br>
 										Currently I'm a Computer Science graduate student at Indiana University Bloomington. <br>
 										I'm a highly motivated individual with a goal-driven creative mindset and passion for learning and innovating. <br>
 										I love to code. <br>
